--- a/DSRend/DSRend2008.vcproj
+++ b/DSRend/DSRend2008.vcproj
@@ -21,6 +21,7 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
+			OutputDirectory="..\DScaler\$(ConfigurationName)"
 			IntermediateDirectory=".\Release"
 			ConfigurationType="2"
 			UseOfMFC="0"
@@ -113,6 +114,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|x64"
+			OutputDirectory="..\DScaler\$(ConfigurationName)64"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
@@ -206,6 +208,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
+			OutputDirectory="..\DScaler\$(ConfigurationName)"
 			IntermediateDirectory=".\Debug"
 			ConfigurationType="2"
 			UseOfMFC="0"
@@ -260,7 +263,6 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="Unicows.lib odbc32.lib odbccp32.lib strmiids.lib version.lib"
-				OutputFile="..\DScaler\Debug/DSRend.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				IgnoreAllDefaultLibraries="false"
@@ -296,6 +298,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|x64"
+			OutputDirectory="..\DScaler\$(ConfigurationName)64"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
